# online-store

./: .gitignore  dump.rdb  pyproject.toml
api/: admin.py  authentication.py  consumers.py  middleware.py  routing.py  tasks1.py  urls.py  websocket_middleware.py
api/migrations/: 0001_initial.py  0002_remove_user_password_reset_token_expires_and_more.py  0003_alter_product_options_product_available_product_slug_and_more.py  0004_alter_user_username.py  0005_alter_user_managers.py  0006_order_comment_order_email_order_phone_number_and_more.py  0007_chatmessage.py  0008_chatroom_message_delete_chatmessage.py
api/models/: __init__.py
api/models/cart/: models.py
api/models/cart_item/: models.py
api/models/category/: models.py
api/models/chat/: models.py
api/models/order/: models.py
api/models/orderItem/: models.py
api/models/product/: models.py
api/models/review/: models.py
api/models/users/: models.py
api/serializers/: __init__.py  auth_serializers.py  cart_item_serialixer.py  cart_serializer.py  category_serializer.py  chat_serializer.py  order_item_serializer.py  order_serializer.py  product_serializer.py  registerSerializer.py  review_serializer.py
api/views/: Base_views.py  __init__.py  auth.py  chat.py
core/: asgi.py  settings.py  urls.py
frontend/: urls.py  views.py
frontend/static/frontend/css/: styles.css
frontend/templates/frontend/: admin_chat.html  base.html  cart.html  chat.html  checkout.html  index.html  login.html  order_detail.html  order_success.html  product_detail.html  register.html  user_orders.html
(+9 files in other folders)
